# 42HN-x-appliedAI-Machine-Learning-MLOps-Part2

./: .gitignore  Spotify_Prediction.ipynb  api.py  pyproject.toml  streamlit_app.py
mlruns/0/: meta.yaml
